<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="billPlease">Bill Please</string>
    <string name="number">Num of pax</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="totalBill">Total Bill:</string>
    <string name="eachPays">Each pays:</string>
</resources>